scores/service/scores-services-service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name:  scores-service-v1
  labels:
    app: scores-service
spec:
  ports:
  - port: 8080
    name: http-server
    targetPort: 3000
  selector:
    app: scores-service
type: LoadBalancer
