scores/service/scores-services-service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  scores-service-v1
  labels:
    app:  scores-service
spec:
  ports:
  - port: 8080
    name: http-server
    targetPort: 3002
  selector:
    app: scores-service
  type: LoadBalancer
