scores/service/scores-services-ingress-http-TEMPLATE.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: scores-service-ingress
spec:
  rules:
  - host: "REPLACE_CLUSTER_INGRESS_SUBDOMAIN_NAME"
    http:
      paths:
        - path: /score
          backend:
            serviceName: "scores-service-v1"
            servicePort: "REPLACE_INGRESS_SERVICE_PORT"
        - path: /api/v1/setupDB
          backend:
            serviceName: "scores-service-v1"
            servicePort: "REPLACE_INGRESS_SERVICE_PORT"
        - path: /api/v1/addscore
          backend:
            serviceName: "scores-service-v1"
            servicePort: "REPLACE_INGRESS_SERVICE_PORT"
        - path: /api/v1/deletescore
          backend:
            serviceName: "scores-service-v1"
            servicePort: "REPLACE_INGRESS_SERVICE_PORT"
        - path: /api/v1/searchscore
          backend:
            serviceName: "scores-service-v1"
            servicePort: "REPLACE_INGRESS_SERVICE_PORT"
        - path: /api/v1/gethighscore
          backend:
            serviceName: "scores-service-v1"
            servicePort: "REPLACE_INGRESS_SERVICE_PORT"
        - path: /api/v1/getscorelist
          backend:
            serviceName: "scores-service-v1"
            servicePort: "REPLACE_INGRESS_SERVICE_PORT"
